--- a/SaiGonWaterBus.html
+++ b/SaiGonWaterBus.html
@@ -1,49 +1,128 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SaiGon WaterBus</title>
-    <link rel="stylesheet" href="./CSS/SaiGonWaterBus.css">
-</head>
-<body>
-    <div class="chupanhbe__header">
-    <p>TRẢI NGHIỆM  WATERBUS ĐỘC NHẤT VÔ NHỊ TRẢI NGHIỆM VẺ ĐẸP CỦA SÀI GÒN</p>
+    <link rel="stylesheet" href="./CSS/Style.css" />
+  </head>
+  <body>
+    <div class="BaiViet__header">
+      <p>TRẢI NGHIỆM WATERBUS ĐỘC NHẤT VÔ NHỊ TRẢI NGHIỆM VẺ ĐẸP CỦA SÀI GÒN</p>
     </div>
-    <div class="chupanhbe__mainpage">
-        <p class="chupanhbe__mainpage--heading"> 1. SaiGon WaterBus</p>
-            <p class="chupanhbe__mainpage--text">Ở Sài Gòn đã lâu nhưng bạn có tự tin là đã hiểu hết về thành phố này chưa? Nếu bạn đã quá mệt mỏi với sự ồn ào, tấp nập ở mảnh đất này thì có thể thử trải nghiệm một ngày lênh đênh trên Water Bus để thấy một Sài Gòn mới mẻ, khác lạ hơn.</p>
-            <div class="chupanhbe__mainpage--images">
-            <img src="../IMAGES/SGWTB1.webp" alt="">
-            </div>
-            <p class="chupanhbe__mainpage--text">Water Bus hay còn gọi là xe buýt sông là phương tiện di chuyển khá phổ biến ở các nước châu Âu nhưng lại khá mới lạ đối với người Việt Nam. Thực tế thì nó đơn giản chỉ là một công cụ giao thông công cộng, nhưng thay vì di chuyển trên mặt đất thì nó sử dụng thuyền và di chuyển trên sông nước.</p>
-            <div class="chupanhbe__mainpage--images">
-            <img src="../IMAGES/SGWTB2.jpg" alt=""></div>
-            <p class="chupanhbe__mainpage--text">Được biết, xe buýt này được đưa vào sử dụng từ năm 2017 và nhanh chóng thu hút được sự chú ý của người dân. Với thiết kế hiện đại, trang thiết bị đầy đủ đảm bảo an toàn cho hành khách, Water Bus hứa hẹn sẽ mang đến cho bạn một chuyến đi đầy thú vị, tận hưởng khung cảnh bình yên để cảm nhận trọn vẹn về một Sài Gòn thân thương.</p>
-            <p class="chupanhbe__mainpage--text">Xe buýt này khá hiện đại và bắt mắt với sắc vàng làm chủ đạo, nó có sức chứa khoảng hơn 60 khách với 66 ghế ngồi được chia thành hai dãy riêng biệt. Để đảm bảo sự an toàn của hành khách thì nhà tàu đã trang bị đầy đủ áo phao. Ngoài ra, Water Bus còn thiết kế thêm 4 cửa thoát hiểm ở phía trước và phía sau tàu để phòng những trường hợp bất trắc.</p>
-            <p class="chupanhbe__mainpage--heading" >2. LỘ TRÌNH XE BUS</p>
-            <p class="chupanhbe__mainpage--text">Water Bus được đưa vào hoạt động với rất nhiều bến và mỗi ngày thường có khoảng 6 lượt xuất phát từ bến đầu đến bến cuối. Lộ trình xe buýt bắt đầu từ bến số 1 Bạch Đằng, quận 1 đến bến số 2 Sài Gòn Pearl, quận Bình Thạnh, sau đó đến bến số 3, Bình An, quận 2 rồi đến bến số 4, Thảo Điền, từ quận 2 đến bến số 5, Tầm Vu, quận Bình Thạnh, tiếp theo đến bến số 6, Thanh Đa, quận Bình Thạnh, kế tiếp là bến số 7, Bình Triệu, quận Thủ Đức đến bến số 8, Hiệp Bình Chánh, quận Thủ Đức và sau đó là đến bến số 9, Bình Quới, quận Thủ Đức.</p>
-            <div class="chupanhbe__mainpage--images">
-            <img src="../IMAGES/SGWTB3.jpg" alt=""></div>
-            <p class="chupanhbe__mainpage--text">Xe buýt thường khởi hành chuyến đầu tiên vào lúc 8h30 và chuyến cuối cùng vào lúc 18h20. Thời gian cập mỗi bến để đón và trả khách là khoảng 5 phút và mất 30 phút cho thời gian để xe buýt di chuyển từ điểm đầu đến điểm cuối. Ở trạm cuối, xe buýt thường dừng khoảng 15 - 20 phút, lúc này bạn có thể tranh thủ lên bờ để mua nước uống, đồ ăn...</p>
-            <p class="chupanhbe__mainpage--text"> Cấu trúc của xe buýt được chia thành nhiều phần khác nhau, phần đầu là khoang lái dành riêng cho xế tàu, phần sau là dãy ghế ngồi, có lắp đặt máy lạnh 24/24 giúp du khách có không gian thoải mái nhất để tham quan, ngắm cảnh. Phần trên của boong tàu còn được thiết kế nhà vệ sinh hiện đại và sạch sẽ. </p>
-           <p class="chupanhbe__mainpage--heading"> 3. HƯỚNG DẪN DI CHUYỂN BẰNG WATERBUS</p>
-            <p class="chupanhbe__mainpage--text">Để có thể trải nghiệm chuyến đi thú vị bằng Water Bus thì bạn đến ngay bến Bạch Đằng nằm ở số 10B Tôn Đức Thắng, Phường Bến Nghé, Quận 1, TP.HCM.
-            </p>
-            <p class="chupanhbe__mainpage--text">Nếu bạn đi xe đến bến thì có thể gửi xe ở phía cổng chào, sau đó bạn mua vé ở quầy vé rồi ngồi chờ đến giờ tàu chạy. Trong thời gian chờ bạn có thể ghé những quán cà phê xinh xinh gần bến với những điểm check-in cực chill cho bạn tha hồ sống ảo.
-            </p>
-            <div class="chupanhbe__mainpage--images">
-            <img src="../IMAGES/SGWTB4.jpg" alt=""></div>
-            <p class="chupanhbe__mainpage--text">Sau khi có thông báo giờ tàu chạy thì bạn đưa vé cho nhân viên kiểm soát và lên tàu, chọn chỗ ngồi cho riêng mình. Nếu bạn muốn ngắm được trọn vẹn vẻ đẹp cuả Sài Gòn thì có thể ra phía sau của tàu.</p>
-            <p class="chupanhbe__mainpage--heading"> 4. TRẢI NGHIỆM WATERBUS</p>
-            <p class="chupanhbe__mainpage--text">Water Bus sẽ mang đến cho bạn những trải nghiệm khó quên khi đến với mảnh đất Sài Gòn thân thương. Chuyến xe buýt này đi qua những điểm đến nổi tiếng ở Sài Gòn như cầu Sài Gòn, cầu Thủ Thiêm, tòa nhà Landmark 81, khu đô thị Vinhomes Central Park... Chỉ cần bạn ngồi yên vị trên xe là có thể ngắm nhìn trọn vẹn vẻ đẹp của thành phố xa hoa bậc nhất Việt Nam này. Nếu chọn điểm đến là Bình An đối diện Landmark 81 thì bạn có thể tha hồ sống ảo với những background cực xịn sò hay nghỉ ngơi, ngắm cảnh sông nước ở những quán lề đường với giá cả cực kỳ hợp lý.
-            </p>
-            <p class="chupanhbe__mainpage--text">Ngoài ra, đi Water Bus bạn có cơ hội thu cả một Sài Gòn rộng lớn vào trong tầm mắt với những tòa nhà cao tầng, những con phố sầm uất, náo nhiệt hay những quán cà phê siêu xinh hai bên bờ. Ở đây, bạn có thể cho mình không gian riêng để hít thở không khí trong lành, tận hưởng những làn gió mát lạnh.
-            </p>
-            <div class="chupanhbe__mainpage--images">
-            <img src="../IMAGES/SGWTB5.jpg" alt=""></div>
-            <p class="chupanhbe__mainpage--text">Khác xa với sự chật chội, ồn ào, vi vu trên Water Bus sẽ khiến bạn thấy được Sài Gòn vẫn còn những góc rất thân thương, yên bình và sâu lắng. Ở đó thay vì sự hiện đại, hào nhoáng thì bạn sẽ cảm nhận có một Sài Gòn rất lạ, vô cùng dễ thương và nhẹ nhàng hơn.</p>
+    <div class="BaiViet__mainpage">
+      <p class="BaiViet__mainpage--heading">1. SÀI GÒN WATERBUS</p>
+      <p class="BaiViet__mainpage--text">
+        Ở Sài Gòn đã lâu nhưng bạn có tự tin là đã hiểu hết về thành phố này
+        chưa? Nếu bạn đã quá mệt mỏi với sự ồn ào, tấp nập ở mảnh đất này thì có
+        thể thử trải nghiệm một ngày lênh đênh trên Water Bus để thấy một Sài
+        Gòn mới mẻ, khác lạ hơn.
+      </p>
+      <div class="BaiViet__mainpage--images">
+        <img src="../IMAGES/SGWTB1.webp" alt="" />
+      </div>
+      <p class="BaiViet__mainpage--text">
+        Water Bus hay còn gọi là xe buýt sông là phương tiện di chuyển khá phổ
+        biến ở các nước châu Âu nhưng lại khá mới lạ đối với người Việt Nam.
+        Thực tế thì nó đơn giản chỉ là một công cụ giao thông công cộng, nhưng
+        thay vì di chuyển trên mặt đất thì nó sử dụng thuyền và di chuyển trên
+        sông nước.
+      </p>
+      <div class="BaiViet__mainpage--images">
+        <img src="../IMAGES/SGWTB2.jpg" alt="" />
+      </div>
+      <p class="BaiViet__mainpage--text">
+        Được biết, xe buýt này được đưa vào sử dụng từ năm 2017 và nhanh chóng
+        thu hút được sự chú ý của người dân. Với thiết kế hiện đại, trang thiết
+        bị đầy đủ đảm bảo an toàn cho hành khách, Water Bus hứa hẹn sẽ mang đến
+        cho bạn một chuyến đi đầy thú vị, tận hưởng khung cảnh bình yên để cảm
+        nhận trọn vẹn về một Sài Gòn thân thương.
+      </p>
+      <p class="BaiViet__mainpage--text">
+        Xe buýt này khá hiện đại và bắt mắt với sắc vàng làm chủ đạo, nó có sức
+        chứa khoảng hơn 60 khách với 66 ghế ngồi được chia thành hai dãy riêng
+        biệt. Để đảm bảo sự an toàn của hành khách thì nhà tàu đã trang bị đầy
+        đủ áo phao. Ngoài ra, Water Bus còn thiết kế thêm 4 cửa thoát hiểm ở
+        phía trước và phía sau tàu để phòng những trường hợp bất trắc.
+      </p>
+      <p class="BaiViet__mainpage--heading">2. LỘ TRÌNH XE BUS</p>
+      <p class="BaiViet__mainpage--text">
+        Water Bus được đưa vào hoạt động với rất nhiều bến và mỗi ngày thường có
+        khoảng 6 lượt xuất phát từ bến đầu đến bến cuối. Lộ trình xe buýt bắt
+        đầu từ bến số 1 Bạch Đằng, quận 1 đến bến số 2 Sài Gòn Pearl, quận Bình
+        Thạnh, sau đó đến bến số 3, Bình An, quận 2 rồi đến bến số 4, Thảo Điền,
+        từ quận 2 đến bến số 5, Tầm Vu, quận Bình Thạnh, tiếp theo đến bến số 6,
+        Thanh Đa, quận Bình Thạnh, kế tiếp là bến số 7, Bình Triệu, quận Thủ Đức
+        đến bến số 8, Hiệp Bình Chánh, quận Thủ Đức và sau đó là đến bến số 9,
+        Bình Quới, quận Thủ Đức.
+      </p>
+      <div class="BaiViet__mainpage--images">
+        <img src="../IMAGES/SGWTB3.jpg" alt="" />
+      </div>
+      <p class="BaiViet__mainpage--text">
+        Xe buýt thường khởi hành chuyến đầu tiên vào lúc 8h30 và chuyến cuối
+        cùng vào lúc 18h20. Thời gian cập mỗi bến để đón và trả khách là khoảng
+        5 phút và mất 30 phút cho thời gian để xe buýt di chuyển từ điểm đầu đến
+        điểm cuối. Ở trạm cuối, xe buýt thường dừng khoảng 15 - 20 phút, lúc này
+        bạn có thể tranh thủ lên bờ để mua nước uống, đồ ăn...
+      </p>
+      <p class="BaiViet__mainpage--text">
+        Cấu trúc của xe buýt được chia thành nhiều phần khác nhau, phần đầu là
+        khoang lái dành riêng cho xế tàu, phần sau là dãy ghế ngồi, có lắp đặt
+        máy lạnh 24/24 giúp du khách có không gian thoải mái nhất để tham quan,
+        ngắm cảnh. Phần trên của boong tàu còn được thiết kế nhà vệ sinh hiện
+        đại và sạch sẽ.
+      </p>
+      <p class="BaiViet__mainpage--heading">
+        3. HƯỚNG DẪN DI CHUYỂN BẰNG WATERBUS
+      </p>
+      <p class="BaiViet__mainpage--text">
+        Để có thể trải nghiệm chuyến đi thú vị bằng Water Bus thì bạn đến ngay
+        bến Bạch Đằng nằm ở số 10B Tôn Đức Thắng, Phường Bến Nghé, Quận 1,
+        TP.HCM.
+      </p>
+      <p class="BaiViet__mainpage--text">
+        Nếu bạn đi xe đến bến thì có thể gửi xe ở phía cổng chào, sau đó bạn mua
+        vé ở quầy vé rồi ngồi chờ đến giờ tàu chạy. Trong thời gian chờ bạn có
+        thể ghé những quán cà phê xinh xinh gần bến với những điểm check-in cực
+        chill cho bạn tha hồ sống ảo.
+      </p>
+      <div class="BaiViet__mainpage--images">
+        <img src="../IMAGES/SGWTB4.jpg" alt="" />
+      </div>
+      <p class="BaiViet__mainpage--text">
+        Sau khi có thông báo giờ tàu chạy thì bạn đưa vé cho nhân viên kiểm soát
+        và lên tàu, chọn chỗ ngồi cho riêng mình. Nếu bạn muốn ngắm được trọn
+        vẹn vẻ đẹp cuả Sài Gòn thì có thể ra phía sau của tàu.
+      </p>
+      <p class="BaiViet__mainpage--heading">4. TRẢI NGHIỆM WATERBUS</p>
+      <p class="BaiViet__mainpage--text">
+        Water Bus sẽ mang đến cho bạn những trải nghiệm khó quên khi đến với
+        mảnh đất Sài Gòn thân thương. Chuyến xe buýt này đi qua những điểm đến
+        nổi tiếng ở Sài Gòn như cầu Sài Gòn, cầu Thủ Thiêm, tòa nhà Landmark 81,
+        khu đô thị Vinhomes Central Park... Chỉ cần bạn ngồi yên vị trên xe là
+        có thể ngắm nhìn trọn vẹn vẻ đẹp của thành phố xa hoa bậc nhất Việt Nam
+        này. Nếu chọn điểm đến là Bình An đối diện Landmark 81 thì bạn có thể
+        tha hồ sống ảo với những background cực xịn sò hay nghỉ ngơi, ngắm cảnh
+        sông nước ở những quán lề đường với giá cả cực kỳ hợp lý.
+      </p>
+      <p class="BaiViet__mainpage--text">
+        Ngoài ra, đi Water Bus bạn có cơ hội thu cả một Sài Gòn rộng lớn vào
+        trong tầm mắt với những tòa nhà cao tầng, những con phố sầm uất, náo
+        nhiệt hay những quán cà phê siêu xinh hai bên bờ. Ở đây, bạn có thể cho
+        mình không gian riêng để hít thở không khí trong lành, tận hưởng những
+        làn gió mát lạnh.
+      </p>
+      <div class="BaiViet__mainpage--images">
+        <img src="../IMAGES/SGWTB5.jpg" alt="" />
+      </div>
+      <p class="BaiViet__mainpage--text">
+        Khác xa với sự chật chội, ồn ào, vi vu trên Water Bus sẽ khiến bạn thấy
+        được Sài Gòn vẫn còn những góc rất thân thương, yên bình và sâu lắng. Ở
+        đó thay vì sự hiện đại, hào nhoáng thì bạn sẽ cảm nhận có một Sài Gòn
+        rất lạ, vô cùng dễ thương và nhẹ nhàng hơn.
+      </p>
     </div>
-</body>
+  </body>
 </html>
