--- a/TrangCaNhan.html
+++ b/TrangCaNhan.html
@@ -19,36 +19,38 @@
       <span class="glyphicon glyphicon-search Header__icon--2"></span>
       <input class="Header__search" type="text" placeholder="Nhập từ tìm kiếm" />
     </div>
-    <a href="" class="Header__title"><i class="glyphicon glyphicon-home"></i></a>
-    <button class="VerHeader__btn">Cho Thuê</button>
+    <a href="" class="Header__title" id="btnHome1"><i class="glyphicon glyphicon-home"></i></a>
+    <button class="VerHeader__btn" id="btnChoThue1">Cho Thuê</button>
     <div class="VerHeader__dropdown--container">
-      <a href=""> Máy ảnh</a>
-      <a href=""> Studio</a>
-      <a href=""> Trang phục</a>
+      <a href="ChuChoThue.html#mayAnh" target="_blank"> Máy ảnh</a>
+      <a href="ChuChoThue.html#studio" target="_blank"> Studio</a>
+      <a href="ChuChoThue.html#trangPhuc" target="_blank"> Trang phục</a>
     </div>
-    <a href="">Album</a>
-    <a href="">Blog</a>
+    <a href="TrangChu2.html#album" target="_blank">Album</a>
+    <a href="" id="btnBlog1">Blog</a>
   </div>
   <div class="HorHeader__container" id="myHeader">
     <a href="javascript:void(0);" class="HorHeader__button" onclick="openNav()"><i
         class="glyphicon glyphicon-menu-hamburger"></i></a>
     <a href="" class="HorHeader__tach">Tách studio</a>
-    <a href="" class="Header__title"><i class="glyphicon glyphicon-home"></i></a>
+    <a href="" class="Header__title" id="btnHome2"><i class="glyphicon glyphicon-home"></i></a>
     <div class="Header__title HorHeader__dropdown">
-      <button class="HorHeader__dropdown--button">Cho Thuê</button>
+      <button class="HorHeader__dropdown--button" id="btnChoThue2">
+        Cho Thuê
+      </button>
       <div class="HorHeader__dropdown--content">
-        <a href="">Máy ảnh</a>
-        <a href="">Studio</a>
-        <a href="">Trang phục</a>
+        <a href="ChuChoThue.html#mayAnh" target="_blank"> Máy ảnh</a>
+        <a href="ChuChoThue.html#studio" target="_blank"> Studio</a>
+        <a href="ChuChoThue.html#trangPhuc" target="_blank"> Trang phục</a>
       </div>
     </div>
-    <a href="" class="Header__title">Album</a>
-    <a href="" class="Header__title">Blog</a>
+    <a href="TrangChu2.html#album" target="_blank" class="Header__title">Album</a>
+    <a href="" class="Header__title" id="btnBlog2">Blog</a>
     <div class="HorHeader__icon">
       <span class="glyphicon glyphicon-search Header__icon--2"></span>
       <input class="Header__search" type="text" placeholder="Nhập từ tìm kiếm" />
     </div>
-    <a href="" class="HorHeader__login2"><img src="../Images/Avatar.png" alt="" /></a>
+    <a href="" class="HorHeader__login2" id="btnAva"><img src="../Images/Avatar.png" alt="" /></a>
   </div>
   <div class="TrangCaNhan__body--container">
     <h2>Tài khoản của tôi</h2>
@@ -60,7 +62,7 @@
       <p class="TrangCaNhan__body--cursor" id="chinhSua">
         <i class="fas fa-edit TrangCaNhan__icon--edit"></i>Chỉnh sửa hồ sơ
       </p>
-      <h2>Điểm tích lũy: <span id="diemTichLuy"></span></h2>
+      <h2>Điểm tích lũy: 0<span id="diemTichLuy"></span></h2>
     </div>
     <hr />
     <div class="TrangCaNhan__item--2">
